[feat]: [CDS-87944]: Adding entity_group, entity_type and path in InputMetadataAPI and updating contracts (#262)
